# code-black-sphere

./: .gitignore  DESIGN.md  PLAN.md  README.md  docker-compose.yml  main.py  pyproject.toml  run.py
app/: __init__.py  config.py  models.py
app/api/: candidates.py  import_export.py  problems.py  settings.py  submissions.py  tabs.py  test_cases.py
app/auth/: forms.py  routes.py
app/main/: routes.py
app/routes/: main.py
app/services/: judge0_service.py  llm_service.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  index.html
app/templates/auth/: login.html  register.html
backend/: Dockerfile
backend/tests/: __init__.py  config.py  conftest.py  test_judge0_service.py
docs/: DEPLOYMENT.md  DEVPLAN.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CandidateList.jsx  CandidateSelector.jsx  CodeEditor.jsx  Layout.jsx  LlmReview.jsx  ProblemDescription.jsx  ProblemSelectionDialog.jsx  ProblemTab.jsx  SubmissionForm.css  SubmissionForm.jsx  TabContainer.jsx  TestResults.jsx
frontend/src/components/ProblemEditor/: BasicInfoEditor.jsx  MarkdownEditor.jsx  PreviewPanel.jsx  PromptEditor.jsx  TestCaseManager.jsx  index.jsx
frontend/src/services/: api.js  problemService.js  settingService.js
frontend/src/store/: useStore.js
tests/: test_candidates_api.py  test_integration.py  test_judge0_service.py  test_problems_api.py  test_settings_api.py  test_submissions_api.py  test_tabs_api.py  test_test_cases_api.py
(+2 files in other folders)
